Remove pm2, Add npm-check-updates

--- a/node-stable/Dockerfile
+++ b/node-stable/Dockerfile
@@ -1,18 +1,13 @@
 ############################################################
-# Dockerfile to that builds on top of nginx to run
-# a sails app with PM2
+# Dockerfile for Sane-stack to run sails.js API application
 ############################################################
-
 
 FROM node:slim
 
 MAINTAINER Markus Padourek <markus@artificial.io>
 
-RUN npm install -g pm2 sails grunt bower
+RUN npm install -g sails grunt bower npm-check-updates
 RUN mkdir /server
-
-#installs nginx to /usr/sbin/nginx
-#conf file is at /etc/nginx/nginx.conf
 
 # Define mountable directories.
 VOLUME ["/server"]
@@ -20,9 +15,5 @@ VOLUME ["/server"]
 # Define working directory.
 WORKDIR /server
 
-# Define default command.
-#CMD ["pm2"]
-
 # Expose ports.
 EXPOSE 1337
-EXPOSE 3000
