--- a/node-0.10.32/Dockerfile
+++ b/node-0.10.32/Dockerfile
@@ -1,18 +1,13 @@
 ############################################################
-# Dockerfile to that builds on top of nginx to run
-# a sails app with PM2
+# Dockerfile for Sane-stack to run sails.js API application
 ############################################################
-
 
 FROM node:0.10.32-slim
 
 MAINTAINER Markus Padourek <markus@artificial.io>
 
-RUN npm install -g pm2@0.11.1 sails@0.10.5 grunt bower
+RUN npm install -g sails@0.10.5 grunt bower npm-check-updates
 RUN mkdir /server
-
-#installs nginx to /usr/sbin/nginx
-#conf file is at /etc/nginx/nginx.conf
 
 # Define mountable directories.
 VOLUME ["/server"]
@@ -20,9 +15,5 @@ VOLUME ["/server"]
 # Define working directory.
 WORKDIR /server
 
-# Define default command.
-#CMD ["pm2"]
-
 # Expose ports.
 EXPOSE 1337
-EXPOSE 3000
