--- a/node-stable-pm2/Dockerfile
+++ b/node-stable-pm2/Dockerfile
@@ -2,7 +2,7 @@
 # Dockerfile for Sane-stack to run sails.js API application
 ############################################################
 
-FROM node:slim
+FROM node:0.12-slim
 
 MAINTAINER Markus Padourek <markus@artificial.io>
 
