Fixed docker build for node 0.12

--- a/node-stable/Dockerfile
+++ b/node-stable/Dockerfile
@@ -2,7 +2,7 @@
 # Dockerfile for Sane-stack to run sails.js API application
 ############################################################
 
-FROM node0.12:slim
+FROM node:0.12-slim
 
 MAINTAINER Markus Padourek <markus@artificial.io>
 
