nvm - helpful comments, nvm version in variable

--- a/nvm-iojs/Dockerfile
+++ b/nvm-iojs/Dockerfile
@@ -2,7 +2,7 @@
 # Dockerfile for Sane-stack to run sails.js API application
 ############################################################
 
-FROM debian:wheezy
+FROM debian:latest
 
 MAINTAINER Markus Padourek <markus@artificial.io>
 MAINTAINER Kris Williams <kris@kris.net>
@@ -10,15 +10,18 @@ MAINTAINER Kris Williams <kris@kris.net>
 ENV NODE_VERSION iojs
 ENV HOME /home
 ENV NVM_DIR $HOME/.nvm
+ENV NVM_VERSION v0.24.0
 ENV DEBIAN_FRONTEND noninteractive
 
 COPY sources.list /etc/apt/sources.list
 
 RUN rm /bin/sh && ln -s /bin/bash /bin/sh && \
     apt-get update && \
-    # backports git for latest git, needed for nvm install
+    # backports git for newer git, needed for nvm install
     apt-get -y --no-install-recommends -t wheezy-backports install git && \
     apt-get install -y --no-install-recommends \
+      # uncomment if you need to use sudo
+      # sudo
       # a lot of fat comes from this package... see if we can pare it down
       # c compiler is necessary for native modules
       build-essential \
@@ -32,9 +35,10 @@ RUN rm /bin/sh && ln -s /bin/bash /bin/sh && \
     addgroup --gid=1000 sane && \
     # create "sane" user
     adduser --system --uid=1000 --home $HOME --shell /bin/bash sane >> /dev/null 2>&1  && \
+    # install sudo to use it
     echo "sane ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers && \
-    mkdir /server && \
     chown -R sane:sane $HOME && \
+    mkdir -p /server && \
     chown -R sane:sane /server && \
     chown -R sane:sane /usr/local && \
     # clean-up packages
@@ -44,15 +48,15 @@ RUN rm /bin/sh && ln -s /bin/bash /bin/sh && \
 USER sane
 
 # install node version manager, latest released/tagged version
-# RUN git --version
-RUN echo $NODE_VERSION > $HOME/.nvmrc && \
-    curl https://raw.githubusercontent.com/creationix/nvm/v0.24.0/install.sh | sh && \
-    echo 'test -s ~/.nvm/nvm.sh && . $_' >> $HOME/.bashrc && \
+RUN touch $HOME/.bashrc && \
+    echo $NODE_VERSION > $HOME/.nvmrc && \
+    curl https://raw.githubusercontent.com/creationix/nvm/$NVM_VERSION/install.sh | sh && \
     # install node
     source $NVM_DIR/nvm.sh && \
     nvm install $NODE_VERSION >> /dev/null 2>&1 && \
     nvm alias default $NODE_VERSION && \
-    npm -g i sails@0.11 grunt bower npm-check-updates
+    # install sails
+    npm -g i sails@0.11 grunt bower
 
 # Define mountable directories.
 VOLUME ["/server"]
